[gd_scene load_steps=9 format=2]

[ext_resource path="res://players/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enviroment/background.png" type="Texture" id=2]
[ext_resource path="res://apples/Apple.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/Main.gd" type="Script" id=4]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://powerups/GoldenApple.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/Wolf.tscn" type="PackedScene" id=7]
[ext_resource path="res://hud/TouchButtons.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 4 )
Apple = ExtResource( 3 )
GoldenApple = ExtResource( 6 )
playtime = 8

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppleContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 220.943, 557.703 )

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="SpawnPowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="Wolf" parent="." instance=ExtResource( 7 )]
position = Vector2( 207.887, 191.508 )

[node name="WolfStartPosition" type="Position2D" parent="."]
position = Vector2( 207.516, 203.021 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchButtons" parent="CanvasLayer" instance=ExtResource( 8 )]
position = Vector2( -152.647, 526.442 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="SpawnPowerUpTimer" to="." method="_on_SpawnPowerUpTimer_timeout"]
